parser/SimpleLangParser.py
# Generated from /home/karol/Desktop/jfk/SimpleLang/SimpleLang.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SimpleLangParser ( Parser ):

    grammarFileName = "SimpleLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'sqrt'", "'^'", "'('", "')'", 
                     "<INVALID>", "<INVALID>", "'*'", "'/'", "'+'", "'-'", 
                     "'repeat'", "'endrepeat'", "'if'", "'then'", "'endif'", 
                     "'print'", "'read'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'=='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "FLOAT", "MUL", "DIV", 
                      "ADD", "SUB", "REPEAT", "ENDREPEAT", "IF", "THEN", 
                      "ENDIF", "PRINT", "READ", "ID", "STRING", "NEWLINE", 
                      "EQ", "LT", "LTE", "GT", "GTE", "WS" ]

    RULE_block = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_ifconditional = 3
    RULE_condition_block = 4
    RULE_gt = 5
    RULE_lt = 6
    RULE_eq = 7
    RULE_gte = 8
    RULE_lte = 9
    RULE_blockif = 10
    RULE_parentheses = 11
    RULE_repetitions = 12
    RULE_value = 13
    RULE_literal = 14

    ruleNames =  [ "block", "stat", "expr", "ifconditional", "condition_block", 
                   "gt", "lt", "eq", "gte", "lte", "blockif", "parentheses", 
                   "repetitions", "value", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    INT=6
    FLOAT=7
    MUL=8
    DIV=9
    ADD=10
    SUB=11
    REPEAT=12
    ENDREPEAT=13
    IF=14
    THEN=15
    ENDIF=16
    PRINT=17
    READ=18
    ID=19
    STRING=20
    NEWLINE=21
    EQ=22
    LT=23
    LTE=24
    GT=25
    GTE=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.NEWLINE)
            else:
                return self.getToken(SimpleLangParser.NEWLINE, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.StatContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.StatContext,i)


        def getRuleIndex(self):
            return SimpleLangParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SimpleLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleLangParser.REPEAT) | (1 << SimpleLangParser.IF) | (1 << SimpleLangParser.PRINT) | (1 << SimpleLangParser.READ) | (1 << SimpleLangParser.ID) | (1 << SimpleLangParser.NEWLINE))) != 0):
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleLangParser.REPEAT) | (1 << SimpleLangParser.IF) | (1 << SimpleLangParser.PRINT) | (1 << SimpleLangParser.READ) | (1 << SimpleLangParser.ID))) != 0):
                    self.state = 30
                    self.stat()


                self.state = 33
                self.match(SimpleLangParser.NEWLINE)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleLangParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(SimpleLangParser.PRINT, 0)
        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def STRING(self):
            return self.getToken(SimpleLangParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(SimpleLangParser.READ, 0)
        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class IfconditionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifconditional(self):
            return self.getTypedRuleContext(SimpleLangParser.IfconditionalContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfcondition" ):
                return visitor.visitIfcondition(self)
            else:
                return visitor.visitChildren(self)


    class RepeatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPEAT(self):
            return self.getToken(SimpleLangParser.REPEAT, 0)
        def repetitions(self):
            return self.getTypedRuleContext(SimpleLangParser.RepetitionsContext,0)

        def block(self):
            return self.getTypedRuleContext(SimpleLangParser.BlockContext,0)

        def ENDREPEAT(self):
            return self.getToken(SimpleLangParser.ENDREPEAT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeat" ):
                return visitor.visitRepeat(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = SimpleLangParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleLangParser.IF]:
                localctx = SimpleLangParser.IfconditionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.ifconditional()
                pass
            elif token in [SimpleLangParser.REPEAT]:
                localctx = SimpleLangParser.RepeatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.match(SimpleLangParser.REPEAT)
                self.state = 41
                self.repetitions()
                self.state = 42
                self.block()
                self.state = 43
                self.match(SimpleLangParser.ENDREPEAT)
                pass
            elif token in [SimpleLangParser.PRINT]:
                localctx = SimpleLangParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(SimpleLangParser.PRINT)
                self.state = 46
                _la = self._input.LA(1)
                if not(_la==SimpleLangParser.ID or _la==SimpleLangParser.STRING):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [SimpleLangParser.ID]:
                localctx = SimpleLangParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.match(SimpleLangParser.ID)
                self.state = 48
                self.match(SimpleLangParser.T__0)
                self.state = 49
                self.expr(0)
                pass
            elif token in [SimpleLangParser.READ]:
                localctx = SimpleLangParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.match(SimpleLangParser.READ)
                self.state = 51
                self.match(SimpleLangParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parentheses(self):
            return self.getTypedRuleContext(SimpleLangParser.ParenthesesContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParexpr" ):
                return visitor.visitParexpr(self)
            else:
                return visitor.visitChildren(self)


    class StringExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SimpleLangParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class VariableExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableExpr" ):
                return visitor.visitVariableExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowerexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowerexpr" ):
                return visitor.visitPowerexpr(self)
            else:
                return visitor.visitChildren(self)


    class LiteralexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(SimpleLangParser.LiteralContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralexpr" ):
                return visitor.visitLiteralexpr(self)
            else:
                return visitor.visitChildren(self)


    class SqrtexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parentheses(self):
            return self.getTypedRuleContext(SimpleLangParser.ParenthesesContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqrtexpr" ):
                return visitor.visitSqrtexpr(self)
            else:
                return visitor.visitChildren(self)


    class MuldivexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.ExprContext,i)

        def MUL(self):
            return self.getToken(SimpleLangParser.MUL, 0)
        def DIV(self):
            return self.getToken(SimpleLangParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMuldivexpr" ):
                return visitor.visitMuldivexpr(self)
            else:
                return visitor.visitChildren(self)


    class AddsubexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.ExprContext,i)

        def ADD(self):
            return self.getToken(SimpleLangParser.ADD, 0)
        def SUB(self):
            return self.getToken(SimpleLangParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddsubexpr" ):
                return visitor.visitAddsubexpr(self)
            else:
                return visitor.visitChildren(self)


    class ImplicitexprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)

        def parentheses(self):
            return self.getTypedRuleContext(SimpleLangParser.ParenthesesContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplicitexpr" ):
                return visitor.visitImplicitexpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleLangParser.INT, SimpleLangParser.FLOAT, SimpleLangParser.ADD, SimpleLangParser.SUB]:
                localctx = SimpleLangParser.LiteralexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 55
                self.literal()
                pass
            elif token in [SimpleLangParser.ID]:
                localctx = SimpleLangParser.VariableExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 56
                self.match(SimpleLangParser.ID)
                pass
            elif token in [SimpleLangParser.T__1]:
                localctx = SimpleLangParser.SqrtexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(SimpleLangParser.T__1)
                self.state = 58
                self.parentheses()
                pass
            elif token in [SimpleLangParser.T__3]:
                localctx = SimpleLangParser.ParexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.parentheses()
                pass
            elif token in [SimpleLangParser.STRING]:
                localctx = SimpleLangParser.StringExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.match(SimpleLangParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 74
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = SimpleLangParser.PowerexprContext(self, SimpleLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 63
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 64
                        self.match(SimpleLangParser.T__2)
                        self.state = 65
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = SimpleLangParser.MuldivexprContext(self, SimpleLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 66
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 67
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==SimpleLangParser.MUL or _la==SimpleLangParser.DIV):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 68
                        self.expr(4)
                        pass

                    elif la_ == 3:
                        localctx = SimpleLangParser.AddsubexprContext(self, SimpleLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 69
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 70
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==SimpleLangParser.ADD or _la==SimpleLangParser.SUB):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 71
                        self.expr(3)
                        pass

                    elif la_ == 4:
                        localctx = SimpleLangParser.ImplicitexprContext(self, SimpleLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 72
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 73
                        self.parentheses()
                        pass

             
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IfconditionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SimpleLangParser.IF, 0)

        def condition_block(self):
            return self.getTypedRuleContext(SimpleLangParser.Condition_blockContext,0)


        def THEN(self):
            return self.getToken(SimpleLangParser.THEN, 0)

        def blockif(self):
            return self.getTypedRuleContext(SimpleLangParser.BlockifContext,0)


        def ENDIF(self):
            return self.getToken(SimpleLangParser.ENDIF, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_ifconditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfconditional" ):
                return visitor.visitIfconditional(self)
            else:
                return visitor.visitChildren(self)




    def ifconditional(self):

        localctx = SimpleLangParser.IfconditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifconditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(SimpleLangParser.IF)
            self.state = 80
            self.condition_block()
            self.state = 81
            self.match(SimpleLangParser.THEN)
            self.state = 82
            self.blockif()
            self.state = 83
            self.match(SimpleLangParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gt(self):
            return self.getTypedRuleContext(SimpleLangParser.GtContext,0)


        def lt(self):
            return self.getTypedRuleContext(SimpleLangParser.LtContext,0)


        def eq(self):
            return self.getTypedRuleContext(SimpleLangParser.EqContext,0)


        def gte(self):
            return self.getTypedRuleContext(SimpleLangParser.GteContext,0)


        def lte(self):
            return self.getTypedRuleContext(SimpleLangParser.LteContext,0)


        def getRuleIndex(self):
            return SimpleLangParser.RULE_condition_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_block" ):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = SimpleLangParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condition_block)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.gt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.lt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.eq()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.gte()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.lte()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def GT(self):
            return self.getToken(SimpleLangParser.GT, 0)

        def INT(self):
            return self.getToken(SimpleLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SimpleLangParser.FLOAT, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_gt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGt" ):
                return visitor.visitGt(self)
            else:
                return visitor.visitChildren(self)




    def gt(self):

        localctx = SimpleLangParser.GtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_gt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SimpleLangParser.ID)
            self.state = 93
            self.match(SimpleLangParser.GT)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==SimpleLangParser.INT or _la==SimpleLangParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def LT(self):
            return self.getToken(SimpleLangParser.LT, 0)

        def INT(self):
            return self.getToken(SimpleLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SimpleLangParser.FLOAT, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_lt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLt" ):
                return visitor.visitLt(self)
            else:
                return visitor.visitChildren(self)




    def lt(self):

        localctx = SimpleLangParser.LtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(SimpleLangParser.ID)
            self.state = 97
            self.match(SimpleLangParser.LT)
            self.state = 98
            _la = self._input.LA(1)
            if not(_la==SimpleLangParser.INT or _la==SimpleLangParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def EQ(self):
            return self.getToken(SimpleLangParser.EQ, 0)

        def INT(self):
            return self.getToken(SimpleLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SimpleLangParser.FLOAT, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_eq

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEq" ):
                return visitor.visitEq(self)
            else:
                return visitor.visitChildren(self)




    def eq(self):

        localctx = SimpleLangParser.EqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SimpleLangParser.ID)
            self.state = 101
            self.match(SimpleLangParser.EQ)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==SimpleLangParser.INT or _la==SimpleLangParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def GTE(self):
            return self.getToken(SimpleLangParser.GTE, 0)

        def INT(self):
            return self.getToken(SimpleLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SimpleLangParser.FLOAT, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_gte

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGte" ):
                return visitor.visitGte(self)
            else:
                return visitor.visitChildren(self)




    def gte(self):

        localctx = SimpleLangParser.GteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gte)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SimpleLangParser.ID)
            self.state = 105
            self.match(SimpleLangParser.GTE)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==SimpleLangParser.INT or _la==SimpleLangParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)

        def LTE(self):
            return self.getToken(SimpleLangParser.LTE, 0)

        def INT(self):
            return self.getToken(SimpleLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SimpleLangParser.FLOAT, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_lte

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLte" ):
                return visitor.visitLte(self)
            else:
                return visitor.visitChildren(self)




    def lte(self):

        localctx = SimpleLangParser.LteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lte)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(SimpleLangParser.ID)
            self.state = 109
            self.match(SimpleLangParser.LTE)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==SimpleLangParser.INT or _la==SimpleLangParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockifContext(ParserRuleContext):
